--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -4,16 +4,16 @@ on: push
 
 jobs:
 echo-hello:
-runs-on: ubuntu-latest
-steps:
-- name: Say hello
-run: echo "Hello, World"
+  runs-on: ubuntu-latest
+  steps:
+    - name: Say hello
+      run: echo "Hello, World"
 echo-goodbye:
-runs-on: ubuntu-latest
-steps:
-- name: Failed step
-run: |
-echo "I will fail"
-exit 1
-- name: Say goodbye
-run: echo "Goodbye!"
+  runs-on: ubuntu-latest
+  steps:
+    - name: Successful step
+      run: |
+        echo "I will succeed"
+        exit 0
+    - name: Say goodbye
+      run: echo "Goodbye!"
