--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -3,17 +3,17 @@ name: 01 - Building Blocks
 on: push
 
 jobs:
-echo-hello:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Say hello
-      run: echo "Hello, World"
-echo-goodbye:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Successful step
-      run: |
-        echo "I will succeed"
-        exit 0
-    - name: Say goodbye
-      run: echo "Goodbye!"
+    echo-hello:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Say hello
+              run: echo "Hello, World"
+  echo-goodbye:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Failes step
+        run: |
+          echo "I will fail"
+          exit 1
+      - name: Say goodbye
+        run: echo "Goodbye!"
