--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -12,10 +12,11 @@ jobs:
             - name: Setup Node
               uses: actions/setup-node@v4
               with:
-                node-version: 20.x
+                node-version: '20.x'
             - name: Install Dependencies
               run: npm ci
               working-directory: 04-using-actions/react-app
+              
         # 0. Checkout the code from the repository
         # 1. Intall dependencies of our react application
         # 2. Execute automated tests
