--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -12,12 +12,10 @@ jobs:
               uses: actions/setup-node@v4
               with:
                 node-version: '20.x'
-                
             - name: Install Dependencies
               run: npm ci
+              shell: /usr/bin/bash -e {0}
               working-directory: 04-using-actions/react-app
-
-
 
         # 0. Checkout the code from the repository
         # 1. Intall dependencies of our react application
