--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -14,6 +14,7 @@ jobs:
                 node-version: '20.x'
             - name: Install Dependencies
               run: npm ci
+                npm ci 
               shell: /usr/bin/bash -e {0}
               working-directory: 04-using-actions/react-app
 
